--- a/rust-playgrounds/unity_rsgen_sample_cli/Cargo.toml
+++ b/rust-playgrounds/unity_rsgen_sample_cli/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 targets = [
     # windows
     "x86_64-pc-windows-msvc",
+    # m1 mac
+    "aarch64-apple-darwin",
 ]
 [dependencies]
 rand = "0.8.3"
