--- a/rust-playgrounds/unity_rsgen_sample/Cargo.toml
+++ b/rust-playgrounds/unity_rsgen_sample/Cargo.toml
@@ -7,17 +7,23 @@ edition = "2021"
 [dependencies]
 
 [lib]
-# unity_rsgen_sample_cliから使うため、libを追加しておく.WinodwsとAndroidはcdylibにする。
-crate-type = ["cdylib","lib"]
+# unity_rsgen_sample_cliから使うため、libを追加しておく.WinodwsとAndroidはcdylibにする。iOSとmacOSはdylibにする。
+crate-type = ["staticlib","cdylib","lib"]
 
 [package.metadata.docs.rs]
 targets = [
+    # android
     "aarch64-linux-android",
-    "x86_64-apple-darwin",
+    # desktop
     "x86_64-pc-windows-msvc",
     "x86_64-unknown-linux-gnu",
     #m1 mac
     "aarch64-apple-darwin",
+    #intel mac
+    "x86_64-apple-darwin",
+    #iOS
+    "aarch64-apple-ios",
+    "x86_64-apple-ios",
 ]
 
 [build-dependencies]
