--- a/rust-playgrounds/unity_rsgen_sample_cli/Cargo.toml
+++ b/rust-playgrounds/unity_rsgen_sample_cli/Cargo.toml
@@ -11,6 +11,8 @@ targets = [
     "x86_64-pc-windows-msvc",
     # m1 mac
     "aarch64-apple-darwin",
+    # intel mac
+    "x86_64-apple-darwin",
 ]
 [dependencies]
 rand = "0.8.3"
